--- a/index.html
+++ b/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" type="text/css" href="styles\style.css">
+</head>
+
+<body>
+<div class= 'container'>
+  <div class = "columnleft">
+
+
+    <img class ='tlf' src="images\phones.png" alt="">
+  </div>
+  <div class = "columnright">
+   
+   
+   
+   
+    <div class = 'top'>
+    <img class = 'instalogo' src="C:\Users\gonza\Desktop\Ironhack\lab-css-instagram-clone\images\brand.png" alt="">
+  <a class='button' href="">
+    <img src="C:\Users\gonza\Desktop\Ironhack\lab-css-instagram-clone\images\home.png" alt="">
+    <span id = 'loginfont'>Log In</span>
+  </a>
+    </div>
+    
+    
+    <div class= 'bottom'>
+
+      <div class='titulo'>Capture and Share the World's Moments</div>
+      <div> <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+      friends and family.</p>   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Oh yeah, did we mention it's free?</p> </div>
+        <img src="C:\Users\gonza\Desktop\Ironhack\lab-css-instagram-clone\images\badge-iphone.png" alt="">
+        <img src="C:\Users\gonza\Desktop\Ironhack\lab-css-instagram-clone\images\badge-android.png"d alt="">
+    </div>
+    </div>
+  </div>
+<footer>
+<div>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+  <span id='copyright'>2014 INSTAGRAM</span>
+</div>
+  
+</footer>
+
+
+</body>
+
 </html>
