almost finish but article padding works strange

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
       <div>
         <img src="./images/brand.png" alt="Instagram Logo">
-        <a href="http://www.instagram.com">
+        <a class="button" href="http://www.instagram.com">
           <img src="./images/home.png" alt="instagram home"> Log In
         </a>
       </div>
