--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="totalColumns">
+      <section class="columnOne">
+      <img href="#" src="images/phones.png" alt="mobile photo">
+      </section>
+
+      <section class="columnTwo">
+        <div id="header-proof">
+          <img href="#" src="images/brand.png" alt="logo and phrase instagram">
+          <a  id="LogInButtom" href="#"><img href="#" src="images/home.png" alt="home image">Log in</a>
+        </div>
+        <div id="all-info"> 
+          <h1>Capture and Share the World's Moments</h1>
+          <article>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p> 
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p> 
+          </article>
+          <div id="bottoms-download">
+            <img href="#" src="images/badge-iphone.png" alt="Download on the App Store">
+            <img href="#" src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </section>
+    </section>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li id="year2014">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>        
+    </footer>
   </body>
 </html>
