--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section>
+     
+      <section id=top>
+        <img src="images\brand.png" alt="brand image">
+          <button><img src="images/home.png" alt=""><span>Log in</span></button>
+      </section>
+     
+     <section id=lower>
+       <div>
+      <img class='phones' src="images\phones.png" alt="image of phones">
+    </div>
+
+    <section id=textblock>
+   
+    <div class='text'>
+      <p>
+        <h1><strong class='textHeader'>Capture and Share <br> the World's Moments</strong></h1>
+     Instagram is a <strong>fast beautiful</strong> , and <strong>fun</strong> way to share your life with
+    friends and family. <br>
+
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
+  </p>
+</div>
+  <div class='badges'>
+    <img src="images\badge-android.png" alt="Google Play">
+    <img class='badges-iphone' src="images\badge-iphone.png" alt="App Store ">
+  </div>
+</section>
+</section>
+  
+  <footer>
+    <ul class='footer'>
+      <li><a href="url" >ABOUT US</a></li>
+      <li><a href="url" >SUPPORT</a></li>
+      <li><a href="url" >BLOG</a></li>
+      <li><a href="url" >API</a></li>
+      <li><a href="url" >JOBS</a></li>
+      <li><a href="url" >PRIVACY</a></li>
+      <li><a href="url" >TERMS</a></li>
+    </ul>
+  </footer>
+  </section>
   </body>
 </html>
