done corrección error carpetas

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="/lab-css-instagram-clone/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
     <div class="side">
-      <img src="/lab-css-instagram-clone/images/phones.png" alt="Two phones" />
+      <img src="/images/phones.png" alt="Two phones" />
     </div>
 
     <div class="side">
       <header>
         <img
-          src="/lab-css-instagram-clone/images/brand.png"
+          src="/images/brand.png"
           alt="Instagram logo"
         />
         <a class="button" href="#"
           ><img
           class="margin"
-            src="/lab-css-instagram-clone/images/home.png"
+            src="/images/home.png"
             alt="Log in button"
           />
          <span>Log in</span> </a
@@ -41,12 +41,12 @@
         <p>Oh yeah, did we mention it's free?</p>
         <img 
         class="margin"
-          src="/lab-css-instagram-clone/images/badge-iphone.png"
+          src="/images/badge-iphone.png"
           alt="Download on the App Store"
         />
         <img
         
-          src="/lab-css-instagram-clone/images/badge-android.png"
+          src="/images/badge-android.png"
           alt="Get it on Google Play"
         />
       </article>
