--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <img src="./images/brand.png" alt="Instagram Logo">
         <a class="button" href="http://www.instagram.com">
-          <img src="./images/home.png" alt="instagram home"> Log In
+          <img id="home" src="./images/home.png" alt="instagram home"> Log In
         </a>
       </div>
       <article>
