--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
 
-    <header class="background-blue">
+    <header>
 
       <img src="/images/brand.png" alt="Instagram brand-logo">
       <div class="logIn background-blue">
@@ -27,9 +27,9 @@
         <img src="/images/phones.png" alt="two phones">
       </section>
 
-      <section>
+      <section class="background">
 
-        <div class="backgroundcolor-info">
+        <div class="text">
           <h1>Instagram Capture and Share the World's Moments</h1>
 
           <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
@@ -44,8 +44,12 @@
 
           <p>Oh yeah, did we mention it's free?</p>
 
-          <img src="/images/badge-iphone.png" alt="Download on the App Store button"><a href="#" target="_blank"></a>
 
+        </div>
+
+        <div class="images">
+          <img src="/images/badge-iphone.png" alt="Download on the App Store button"><a href="#" target="_blank"></a>
+          
           <img src="/images/badge-android.png" alt="Get it on Google Play button"><a href="#" target="_blank"></a>
         </div>
 
