--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class=background>
+    <section class=front>  
+      <img src="images\phones.png" alt="Instagram on phone">
+        <article class=frontbox>
+          <div class=logoandbutton>
+              <img src="images\brand.png" alt="Instagram" class=logo>
+              <a href="#"class=button>
+              <img src="images\home.png" alt="Log in" id=imga>Log in
+              </a>
+            </div>
+          <div class=frame>
+            <div class=presentation><h1 class=title>Capture and Share <br> the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+            <p>Oh yeah, did we mention it's free?</p></div></div>
+          <div class=downlinks>
+            <a href="#"><img src="images\badge-iphone.png" alt="Download on the App Store"></a>
+            <a href=""><img src="images\badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+        </article>
+    </section>
+    <footer>
+        <ul class="iglinks">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#" class=copyright>&copy; 2014 Instagram</a></li>
+        </ul>
+    </footer>
+    </section>
   </body>
 </html>
