--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <section class="leftcontainer">
+      <img src="images/phones.png" alt="Imagen de dos smartphones">
+    </section>
+    <section>
+      <div class="rightcontainer">
+        <a href="index.html">
+          <img src="images/brand.png" alt="Logotipo de Instagram">
+        </a>
+        <div class="button"><a href="https://www.instagram.com/?hl=es">
+            <img src="images/home.png">
+            Log in</a>
+        </div>
+      </div>
+      <div class="opacity">
+        <div>
+          <h2>Capture and Share<br> the World's Moments</h2>
+        </div>
+        <div>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+            life with friends and family.
+            <br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+            <br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="iconos">
+          <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank">
+            <img src="images/badge-iphone.png" alt="Logo compra en AppStore">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb&utm_campaign=loginPage&ig_mid=EEB9036A-4AE4-48C8-9B1B-62CDC6CCB0BF&utm_content=lo&utm_medium=badge"
+            target="_blank">
+            <img src="images/badge-android.png" alt="Logo compra en Android">
+          </a>
+        </div>
+      </div>
+  </div>
+  </section>
+  <div>
+    <ul class="bottomcontainer">
+      <li><a href="#">Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy Terms</a></li>
+      <li><a href="#">&copy; 2014 Instagram</a></li>
+    </ul>
+  </div>
+
+
+</body>
+
 </html>
