--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div>
+    <img src="./images/phones.png" alt="two iphones">
+
+    <main>
+      <header>
+        <img src="./images/brand.png" alt="instagram logo">
+
+        <a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="./images/home.png"
+            alt="little blue house">Log in </a>
+      </header>
+      <section>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+          friends and family.</p>
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free? </p> <br>
+        <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank"><img
+            src="./images/badge-iphone.png" alt="appstore logo"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es&gl=US" target="_blank"><img
+            src="./images/badge-android.png" alt="googleplay logo"></a>
+      </section>
+    </main>
+  </div>
+  <footer>
+    <ul>
+      <li><a href="https://about.instagram.com/" target="_blank">about us</a></li>
+      <li><a href="https://help.instagram.com/" target="_blank">support</a></li>
+      <li><a href="https://about.instagram.com/blog" target="_blank">blog</a></li>
+      <li><a href="https://about.instagram.com/blog" target="_blank">press</a></li>
+      <li><a href="https://developers.facebook.com/docs/instagram" target="_blank">api</a></li>
+      <li><a href="https://about.instagram.com/about-us/careers" target="_blank">jobs</a></li>
+      <li><a href="https://help.instagram.com/519522125107875" target="_blank">privacy</a></li>
+      <li><a href="https://help.instagram.com/581066165581870" target="_blank">terms</a></li>
+    </ul>
+    <p>© 2014 instagram</p>
+  </footer>
+
+</body>
+
 </html>
