maximizing phone withing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div id=principal>
-    <img src="./images/phones.png" alt="Phones">
+    <img id="phones" src="./images/phones.png" alt="Phones">
     <section>
       <div>
         <img src="./images/brand.png" alt="Instagram Logo">
