--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
     <section class="flex pad9">
-      <article class="width50">
+      <article class="width50 align-center">
       <img src="./images/phones.png" alt="Instagram in phones">
         
       </article>
@@ -23,20 +23,21 @@
 
         <h1>Capture and Share the World's Moments</h1>
         <div id="text-card">
-        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
-    friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-    <p>Oh yeah, did we mention it's free?</p>  
-    </div>
-    <img src="./images/badge-iphone.png" alt="Download from App store"><img src="./images/badge-android.png" alt="Download from Google play">  
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+      friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>  
+        </div>
+    <a href="#" target="_blank" rel="noopener noreferrer"><img src="./images/badge-iphone.png" alt="Download from App store" class="mrgn-right"></a>
+    <a href="#" target="_blank" rel="noopener noreferrer"><img src="./images/badge-android.png" alt="Download from Google play"></a>  
   </div>  
   </article>
     </section>
     </main>
 
     <footer>
-      <nav class="flex">
+      <nav>
         <ul class="flex center">
           <li><a href="#" target="_blank" rel="noopener noreferrer">About Us</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Support</a></li>
@@ -44,7 +45,7 @@
           <li><a href="#" target="_blank" rel="noopener noreferrer">Press</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">API</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Terms</a></li>
-          <li>&copy; 2014 Instagram</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
         </ul>
       </nav>       
     </footer>
