--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body>hola
   <div class="container">
     <section class="leftcontainer">
       <img src="images/phones.png" alt="Imagen de dos smartphones">
