--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="flex-container">
+    <section class="phone">
+      <img src="/lab-css-instagram-clone/images/phones.png" alt="phones image">
+    </section>
+
+    <section class="box">
+      <div class="button">
+        <img src="/lab-css-instagram-clone/images/brand.png" alt="instagram Logo">
+        <div class="container">
+          <a class="home" href="login.html">
+            <img src="/lab-css-instagram-clone/images/home.png" alt="home logo">
+            Log in
+          </a>
+        </div>
+      </div>
+      <div class="frame">
+        <h1>Capture and Share the World's Moments</h1>
+        <div class="insideFrame">
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <img src="/lab-css-instagram-clone/images/badge-android.png" alt="Download in Google Play"><img
+          src="/lab-css-instagram-clone/images/badge-iphone.png" alt="Download in AppStore">
+      </div>
+  </div>
+  </section>
+  </div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
