--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>hola
+<body>
   <div class="container">
     <section class="leftcontainer">
       <img src="images/phones.png" alt="Imagen de dos smartphones">
@@ -20,7 +20,7 @@
         </a>
         <div class="button"><a href="https://www.instagram.com/?hl=es">
             <img src="images/home.png">
-            Log in</a>
+            Log in </a>
         </div>
       </div>
       <div class="opacity">
