--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href= styles/style.css rel="stylesheet" type="text/css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-div">
+      <div class="second-main-section">
+        <div class="third-main-section">
+          <section>
+            <img src="./images/phones.png" alt="mobile phones">
+          </section>
+          <section class="second-section">
+            <article>
+              <div class="section-two-head">
+                <div>
+                  <img src="./images/brand.png" alt="Instagram brand">
+                </div>
+                <div class="section-in-section-head">
+                  <div>
+                  <img src="./images/home.png" alt="home">
+                </div>
+                  <div>
+                  <p class="parr">Log in</p>
+                </div>
+                </div>
+              </div>
+              
+            </article>
+            <article class="section-two-center">
+            <div class="parrafo">
+            <h1>Capture and Share the <br> World's Moments</h1>
+              <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life <br> with
+              friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+              &mdash; It's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            </article>
+            <article class="section-two-final">
+              <img src="./images/badge-iphone.png" alt="Apple logo" class="botons-mobile">
+              <img src="./images/badge-android.png" alt="Google Play Logo" class="botons-mobile">
+            </article>
+          </section>
+        </div>
+      </div>
+      <div>
+        <footer>
+          <div>
+            <ul class="footer-list">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Api</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Terms</a></li>
+            </ul>
+          </div>
+          <div class="copyright">
+            &copy; 2014 Instagram 
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
+  
 </html>
