CLone Instagram Salva

--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="supremo">
+      <section1>
+        <article class="phones">
+          <div>
+            <img src="https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/phones.png"
+              alt="Phones" />
+        </article>
+        <article class="leftsize">
+          <div class="logoinstagran">
+            <img src="https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/brand.png"
+              alt="Instagran logo" />
+
+            <button class="buttonlogin"><img
+                src="https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/home.png"
+                alt="Home logo" />Log in</button>
+          </div>
+          <div class="frametext">
+            <h1> Capture and Share the World´s Moments </h1>
+            <p class="textexplain1">Instagram is a <strong>fast, beautiful</strong> and<strong> fun</strong> way to
+              share
+              your life with friends and
+              family.
+            </p>
+            <p class="textexplain2">Take a picture or video, choose a filter to transform its look and feel, then post
+              to
+              Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
+              to see the world.</p>
+            <p> Oh yeah, did we mention it's free?</p>
+            <img
+              src="https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/badge-iphone.png"
+              alt="badge-iphone" />
+            <img
+              src="https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/badge-android.png"
+              alt="badge-android" />
+        </article>
+      </section1>
+    </div>
+    <section>
+      <div class="div1">
+        <ul>
+          <li> about us </a></li>
+          <li> support </a></li>
+          <li> blog </a></li>
+          <li> press </a></li>
+          <li> api </a></li>
+          <li> jobs </a></li>
+          <li> privacy </a></li>
+          <li> terms </a></li>
+          <li> &copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </section>
   </body>
+
 </html>
