--- a/index.html
+++ b/index.html
@@ -1,16 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nuevo</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <main>
+
+    <img src="./images/phones.png" alt="iphone image">
+    <section>
+      <header>
+        <img class="Insta-logo" src="./images/brand.png" alt="instagram logo">
+        <a href="#"><img src="./images/home.png">Log in</a>
+      </header>
+      <article>
+        <h1>Capture and Share the world´s moments</h1>
+        <p>
+          Instagram Capture and Share the World's Moments Instagram is a <strong>fast, beautiful</strong> and
+          <strong>fun</strong> way to share your life with
+          friends and family.
+        </p>
+
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's
+          that
+          easy. You
+          can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+
+        <p>
+
+          Oh yeah, did we mention it's free?
+
+        </p>
+
+
+
+
+      </article>
+
+      <div class="apps stores">
+        <img src="./images/badge-iphone.png" alt="applelogo">
+        <img src="./images/badge-android.png" alt="android logo">
+      </div>
+
+
+    </section>
+  </main>
+
+
+  <footer>
+
+    <ul>
+      <li>About us</li>
+      <li>Support</li>
+      <li>BLog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="color-grey">&copy; 2014 Instagram</li>
+
+    </ul>
+
+  </footer>
+</body>
+
+</html>
+
+
+
+
+
+</body>
+
 </html>
