--- a/index.html
+++ b/index.html
@@ -5,12 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="top-container">
+     <div class="brand">
+      <img src="images/brand.png">
+     </div>
+     <div class="home">
+      <img src="./images/home.png">
+        Login
+     </div>  
+    </div>
+    
+    <div class="main-container">
+     <div class="box">
+      <h1>Capture and Share the World's Moments</h1>
+      <h2>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.</h2>
+      <h2>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</h2>
+      <h2>Oh yeah, did we mention it's free?</h2>
+        <div class="img-container"> 
+          <div class="badge-iphone">
+            <img src="images/badge-iphone.png">
+          </div>
+          <div class= "badge-android">
+            <img src="images/badge-android.png">
+          </div>
+          <div id="phones">
+            <img src="images/phones.png">
+          </div>
+        </div>  
+    </div>
+
+    <div class="bottom">
+      <ul class="bottom-container">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
   </body>
 </html>
