--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <section class="columnTwo">
         <div id="header-proof">
           <img href="#" src="images/brand.png" alt="logo and phrase instagram">
-          <a  id="LogInButtom" href="#"><img href="#" src="images/home.png" alt="home image">Log in</a>
+          <button id="logInButtom">
+            <img href="#" src="images/home.png" alt="home image">
+            <span class="login-text">Log in</span>
+          </button>
         </div>
         <div id="all-info"> 
           <h1>Capture and Share the World's Moments</h1>
@@ -29,8 +32,8 @@
             <p>Oh yeah, did we mention it's free?</p> 
           </article>
           <div id="bottoms-download">
-            <img href="#" src="images/badge-iphone.png" alt="Download on the App Store">
-            <img href="#" src="images/badge-android.png" alt="Get it on Google Play">
+            <a href="#"><img href="#" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img href="#" src="images/badge-android.png" alt="Get it on Google Play"></a>
           </div>
         </div>
       </section>
@@ -38,7 +41,7 @@
 
     <footer>
       <nav>
-        <ul>
+        <ul class="footer-items">
           <li><a href="#">About Us</a></li>
           <li><a href="#">Support</a></li>
           <li><a href="#">Blog</a></li>
