--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+
     <!-- don't forget to link your styles -->
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+  <body> 
+   <section>  
+    
+    <img  class="phones"src="images/phones.png" alt="phonesphoto">
+    
+    <div class="container1" >
+      <header> 
+    <img class="logo" src= "images/brand.png" alt="logo Instagram">
+  
+       <a href="#"> <img src="images/home.png" alt=""> log in</a> 
+ </header>
+
+  
+    <article> 
+      <h1> Capture and Share the World's Moments </h1>
+  <p>  
+     Instagram is a <strong> fast, beautiful </strong> and <strong> fun </strong> way to share your life with
+    friends and family. </p>
+<p>  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+   </p>
+<p> 
+    Oh yeah, did we mention it's free?
+</p>
+    </article>
+
+
+  <img class="descargas" src="images/badge-android.png" alt="androit">
+
+<img class="descargas" src="images/badge-iphone.png" alt="iphone">
+  </div>
+    </section>
+    <footer> <strong> 
+<ul class="container2"> 
+  <li> <a href="#"> about us</a> </li>
+  <li> <a href="#">Support </a>  </li>
+  <li> <a href="#">blog </a> </li>
+  <li> <a href="#"> Press </a>  </li>
+  <li> <a href="#">api</a> </li>
+  <li> <a href="#"> Jobs </a> </li>
+  <li> <a href="#" > Privacy</a> </li>
+  <li> <a href="#">Terms </a></li>
+ <li>   &copy; 2014 Instagram</li>
+</ul> 
+</strong>
+    </footer>
   </body>
 </html>
