--- a/index.html
+++ b/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="flex-container">
+    <div id="caja1">
+      <img src="/images/phones.png" />
+
+    </div>
+    <div id="caja2">
+      <div id="superiorCaja2">
+        <div id="fotoInsta">
+          <img src="/images/brand.png" />
+        </div>
+        <div id="fotoHome">
+          <img src="/images/home.png" />
+        </div>
+      </div>
+      <div id="inferiorCaja2">
+        <div>
+          <p>
+            Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your
+            life
+            with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+            Oh yeah, did we mention it's free?
+          </p>
+
+        </div>
+        <div id="fotoStores">
+          <div id="fotoIzq">
+            <img src="/images/badge-iphone.png" />
+          </div>
+          <div id="fotoDer">
+            <img src="/images/badge-android.png" />
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div id="footer">
+    About Us Support Blog
+    Press
+    API
     Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+  </div>
+
+</body>
+
 </html>
