--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div id="fotoHome">
           <img src="/images/home.png" />
+          log in
         </div>
       </div>
       <div id="inferiorCaja2">
@@ -53,7 +54,7 @@
   <div id="footer">
     About Us Support Blog
     Press 
-    
+
     API
     Jobs Privacy Terms &copy; 2014 Instagram
 
