--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
       </div>
       <div id="inferiorCaja2">
         <div>
-          <p>
-            Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your
-            life
-            with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p>
+
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to
             Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-            world.
-            Oh yeah, did we mention it's free?
-          </p>
+            world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+
 
         </div>
         <div id="fotoStores">
@@ -53,7 +54,7 @@
   </div>
   <div id="footer">
     About Us Support Blog
-    Press 
+    Press
 
     API
     Jobs Privacy Terms &copy; 2014 Instagram
