--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="style.css"> 
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <section1>
+        <img class="instagramlogo" src= images\brand.png alt="logo Instagram">
+    <div class="box">
+      <img src=images\home.png alt="Home">
+      <p>Log in</p>
+    </div>
+    
+  </section1>
+  <section2>
+    <img class="Phones" src=images\phones.png alt= "phones">
+  </section2>
+  <section3>
+    <img class="frame" src=images\frame.png alt = "frame">
+    <div class="textOnFrame">
+     <h1>Capture and Share the World's Moments</h1>
+     <p>Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+         friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      <img src=images\badge-iphone.png alt="iphone">
+      <img src=images\badge-android.png alt="android">
+    </div>
+  </section3>
+  <section4>
+    <nav>
+      <ul class="footer">
+        <a href= "#about"> About Us </a>
+        <a href= "#support"> Support </a>
+        <a href= "#blog">Blog </a>
+        <a href= "#Press"> Press </a>
+        <a href= "#API">API </a>
+        <a href= "#Jobs">Jobs </a>
+        <a href= "#Privacy"> Privacy </a>
+        <a href= "#Terms">Terms </a>
+        &copy; 2014 Instagram
+      </ul>
+       </nav>
+  </section4>
   </body>
 </html>
