AdamBathoriKiss- Instagram Clone

--- a/index.html
+++ b/index.html
@@ -4,13 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="instagramContent">
+
+
+    <div class="content">
+
+      <div class="phones">
+
+        <img src="../lab-css-instagram-clone/images/phones.png" alt="phones">
+
+      </div>
+
+      <div class="second-half">
+
+        <div class="imagesOfSecond">
+
+        <img src="../lab-css-instagram-clone/images/brand.png" alt="instabrand">
+
+
+        <div class="home">
+
+        <img src="../lab-css-instagram-clone/images/home.png" class="sec" alt="home">
+
+          <a href="#">Log in</a>
+
+        </div>
+
+      </div>
+
+        <div class="wordBox">
+
+            <h1>Capture and Share the Worlds's Moments</h1>
+
+              <p>Instagram is a <b>fast, beautiful </b> and  <b>fun</b>  way to share your life with
+                friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+                Oh yeah, did we mention it's free?</p>
+
+           <div class="wordBoxPictures">
+
+            <img src="../lab-css-instagram-clone/images/badge-iphone.png" alt="appstore">
+            <img src="../lab-css-instagram-clone/images/badge-android.png" alt="google-play">
+
+           </div>     
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+    <div class="kindOfFooter">
+
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+
+        
+    </div>
+
+
+
+  </section>
+
+    
   </body>
 </html>
