--- a/index.html
+++ b/index.html
@@ -3,14 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <img src="images/phones.png" alt="Instagram on phones" id="phones" />
+      <div id="wrapper">
+        <div>
+          <img src="images/brand.png" alt="Logo" id="logo" />
+          <a href="#" id="login"
+            ><img src="images/home.png" alt="Login" />Log in</a
+          >
+        </div>
+        <article>
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div id="download-pics">
+            <img src="images/badge-iphone.png" alt="Download for IPhone" /><img
+              src="images/badge-android.png"
+              alt="Download for Android"
+            />
+          </div>
+        </article>
+      </div>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+      </ul>
+      <span id="copyright">&copy; 2014 Instagram</span>
+    </footer>
   </body>
 </html>
