--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id='background'></div>
+     <main class="main">
+      <img src="./images/phones.png" id="phones" />
+      <div class="main-right">
+        <div class='top-right'>
+           <img src="./images/brand.png" />
+            <div class="log-in">
+              <img src='./images/home.png'/>
+              <p>Log in</p>
+            </div>
+          </div>
+         <div class="text">
+        <h2>Capture and Share 
+          <br>
+          the World's Moments</h2>
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.
+          <br />
+          <br>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          <br />
+          <br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div class="download">
+          <img src='./images/badge-iphone.png'/>
+          <img src='./images/badge-android.png'/>
+        </div>
+     </div>
+    </main>
+  <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
+
   </body>
 </html>
