--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <!-- THIS WAS LUIS' STRUCTURE; I PUT IT HERE, SINCE I HAD DONE THE STRUCTURE ALREADY AND IT WAS DIFFERENT  
+  <main>
+    <div class="main-Img">
+    </div>
+    <section>
+      <div class="logo">        
+      </div>
+      <article>
+        <h1></h1>
+        <p></p>
+      </article>
+    </section>
+  </main>
+  -->
+  <div id="blue">
+    <img src="./images/brand.png" alt="instagram">
+    <button> <img src="./images/home.png" alt="home"> Login</button>
+  </div>
+  <div id="phones">
+    <section class="phone">
+      <img img src="./images/phones.png" alt="phone">
+    </section>
+    <article class="phone1"> 
+      <h1>Capture and Share the World's Moments</h1> 
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+      <p>Oh yeah, did we mention it's free? </p>
+      <img src="./images/badge-iphone.png" alt="app store">
+      <img src="./images/badge-android.png" alt="app store">
+    </article>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms </li>
+      <li class="date-inst">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
