--- a/index.html
+++ b/index.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!-- Section 1-->
+    <section>
+      <div class="main">
+        <div id="main-img">
+          <img src="./images/phones.png" alt="phones" />
+        </div>
+
+        <div id="main-content">
+          <div id="header">
+            <img src="./images/brand.png" alt="logo" />
+
+            <button>
+              <img src="./images/home.png" alt="home-button" />
+              Log in
+            </button>
+          </div>
+
+          <div id="main-text">
+            <h1>Capture and Share <br />the World's Moments</h1>
+            <p>
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family. <br />
+              <br />
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world. <br />
+              <br />
+              Oh yeah, did we mention it's free?
+            </p>
+
+            <div id="twoButtons">
+              <img src="./images/badge-iphone.png" alt="logo-AppStore" />
+              <img src="./images/badge-android.png" alt="logo-GooglePlay" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
