not yet quite done, but submitting in current unfinished form

--- a/index.html
+++ b/index.html
@@ -3,14 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class="" id="main-container">
+      <section class="image-container">
+        <div id="main-image-wrapper"><img src="./images/phones.png" alt="image of phones">
+        </div>
+      </section>
+      <section class="header-and-content-container">
+        <header>
+            <img src="./images/brand.png" alt="image of brand">
+          <button id="login-button">
+            <img src="./images/home.png" alt="image of home">
+            <p id="login">Log in</p>
+          </button>
+        </header>
+        <div id="content-container">
+          <h2 id="heading-content">Capture and Share <br> the World's Moments</h2>
+          <article id="main-text">Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. <br> <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br> <br>
+            Oh yeah, did we mention it's free? <br> <br></article>
+          <div id="link-container">
+            <a href="" id="apple-link"><img src="./images/badge-iphone.png" alt="link inphone"></a>
+            <a href="" id="android-link"><img src="./images/badge-android.png" alt="link android" id="android-image"></a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <p id="copy-right">&copy 2014 Instagram</p>
+    </footer>
+    </section>
   </body>
 </html>
