add basic styling

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
       <div id="content-container">
 
-        <div>
+        <div id="header">
           <img src="./images/brand.png" alt="Logo"> 
-          <button href="#"> Login</button>   
+          <button id="login-button" href="#"> <img src="./images/home.png"> Login</button>   
         </div> 
 
         <div id="main-content">
           <h2>Capture and Share the World's Moments</h2>
           <p> 
-            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family. 
+            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family. <br>
         
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
 
-            Oh yeah, did we mention it's free?
+            Oh yeah, did we mention it's free? 
           </p>
         </div>
 
         <div>
-          Download on the App Store
-          Get it on Google Play
+          <img src="./images/badge-iphone.png" alt="App Store">
+          <img src="./images/badge-android.png" alt="Google Play Store">
         </div>
 
       </div>
