--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     
   <main >
-    <div></div>
+    <div class="placeHolder"></div>
     <div id="mainImage">
       <img src="./images/phones.png" alt="mobile-phone">
     </div>
@@ -20,7 +20,7 @@
     <div>
     <header>
       <img src="./images/brand.png" alt="icon of a camera and a tex 'Instagram'">
-      <button><img src="./images/home.png" alt="simple painted house"> Login</button>
+      <button class="login"><img src="./images/home.png" alt="simple painted house"> Login</button>
     </header>
     
     <div id="mainContent">
@@ -38,8 +38,8 @@
     <p>
       Oh yeah, did we mention it's free? 
     </p>
-    <button><img src="./images/badge-iphone.png" alt="link to Iphone Store"></button>
-    <button><img src="/images/badge-android.png" alt="link to Android store"></button>
+    <button class="downloadButton"><img src="./images/badge-iphone.png" alt="link to Iphone Store"></button>
+    <button class="downloadButton"><img src="/images/badge-android.png" alt="link to Android store"></button>
     </div>
   </div>
   </main>
