--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    
+  <div id="box"></div>
   <main >
     <div class="placeHolder"></div>
     <div id="mainImage">
