Barts Solved Insta Clone

--- a/index.html
+++ b/index.html
@@ -1,16 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="blue_background">
+
+    <section class="section_middle">
+
+      <div>
+        <img class="phone" src="./images/phones.png" alt="">
+      </div>
+      <div>
+
+        <div class="log_in">
+          <div>
+            <img id="instaLogo" src="./images/brand.png" alt="Instagram">
+          </div>
+          <div class="log_button">
+            <img class="house" src="./images/home.png" alt="home button">
+            <h4> Log in </h4>
+          </div>
+        </div>
+
+        <main class="background_fade">
+          <div>
+            <div class="headline">
+              <h1> Capture and Share the World's Moments</h1>
+            </div>
+            <div class="text">
+              Instagram is a <b> &nbsp; fast, beautiful and  fun &nbsp;</b> way to share your life with
+              friends and family.
+            </div>
+            <div class="text">
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the
+              world.
+            </div>
+            <div class="text">
+              Oh yeah, did we mention it's free?
+            </div>
+          </div>
+          <div class="Button_position">
+            <div>
+              <img class="download_button" src="./images/badge-iphone.png" alt="apple store">
+
+            </div>
+            <div>
+              <img class="download_button" src="./images/badge-android.png" alt="android store">
+
+            </div>
+          </div>
+        </main>
+
+      </div>
+
+    </section>
+
+    <footer>
+     <p class="contact"> About Us Support Blog Press API
+      Jobs Privacy Terms</p> <p class="trademark"> &copy; 2014 Instagram </p>
+    </footer>
+  </div>
+
+</body>
+
 </html>
