--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" media="" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="container">
+      <div>
+        <img src="/images/phones.png" alt="Phones" class="phones" />
+      </div>
+
+      <div>
+        <img src="/images/brand.png" alt="Logo" />
+        <a href="something" class="button"><img src="/images/home.png" alt="home" />Log In</a>
+
+        <div class="frame">
+          <h2>Capture and Share the World's Moments</h2>
+
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram it's that easy. You can even share to
+              Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            
+            <p>
+            Oh yeah, did we mention it's free?
+          </p>
+      
+
+          <div class="appstorelogos">
+            <a href="https://apps.apple.com/us/app/instagram/id389801252">
+              <img alt="Download on the App Store" src="/images/badge-iphone.png">
+              <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US">
+                <img alt="Get it on Google Play" src="/images/badge-android.png">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <ul>
+        <li><a href="#"> About Us </a></li>
+        <li><a href="#"> Support </a></li>
+        <li><a href="#"> Blog </a></li>
+        <li><a href="#"> Press </a></li>
+        <li><a href="#"> API </a></li>
+        <li><a href="#"> Jobs </a></li>
+        <li><a href="#"> Privacy </a></li>
+        <li><a href="#"> Instagram 2014 </a></li>
+      </ul>
+  
+
+
+    </footer>
   </body>
 </html>
